--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "homepage": "https://github.com/Bondvik/online-store#readme",
   "dependencies": {
+    "dayjs": "^1.10.7",
+    "nanoid": "^3.1.29",
     "nouislider": "^15.4.0",
     "webpack": "^5.56.1",
     "webpack-cli": "^4.8.0",
